stuff/yaml/iteration-3/myapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myapp-route
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: myapp-service
